--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,4 +1,5 @@
 # These are supported funding model platforms
-github: [muhammad-fiaz]
-ko_fi: muhammadfiaz
-custom: [https://pay.muhammadfiaz.com]
+github: [vlex127]
+ko_fi: VincentIwuno
+patreon: vlex127
+custom: [https://pay.vincentiwuno.kesug.com]
