Update funding links and add Instagram to site configuration

--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -2,4 +2,4 @@
 github: [vlex127]
 ko_fi: VincentIwuno
 patreon: vlex127
-custom: [https://pay.vincentiwuno.kesug.com]
+custom: [https://pay-vincentiwuno.kesug.com]
