--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "vaul": "^1.1.2",
+    "xmldom": "^0.6.0",
     "zod": "^4.0.17"
   },
   "devDependencies": {
@@ -70,6 +71,5 @@
     "tailwindcss": "^4.1.12",
     "tw-animate-css": "^1.3.7",
     "typescript": "^5.9.2"
-
   }
 }
